--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -3,8 +3,8 @@
 /* ============================================= */
 
 * {
-    font-family: 'Lato', sans-serif;
-    color: #777;
+    font-family: $font-stack;
+    color: $black;
     box-sizing: border-box;
   }
   
@@ -22,17 +22,17 @@
   /* ============================================= */
   
   .headline-primary {
-    color: #58e1c1;
+    color: $scuba-blue;
     margin-left: 10px;
   }
   
   .headline-secondary {
     font-weight: 300;
-    color: #777;
+    color: $grey;
   }
   
   .link {
-    color: #51ddfc;
+    color: $light-blue;
     font-weight: 700;
   }
   
@@ -42,6 +42,6 @@
     font-style: italic;
     margin-left: 20px;
     padding-left: 20px;
-    border-left: 8px solid #58e1c1;
+    border-left: 8px solid $scuba-blue;
     border-radius: 5px;
   }
