--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -2,7 +2,8 @@
 /*              Images                           */
 /* ============================================= */
 
-.img-avatar {
+.img {
+  &-avatar {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -11,7 +12,7 @@
     max-height: 100%;
   }
   
-  .img-frame {
+  &-frame {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -21,8 +22,10 @@
     border: 1px solid #ccc;
   }
   
-  .img-logo {
+  &-logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
+}
+
