--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -4,7 +4,7 @@
 
 .img {
   &-avatar {
-    display: block;
+    display: $dis;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -13,7 +13,7 @@
   }
   
   &-frame {
-    display: block;
+    display: $dis;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
@@ -23,7 +23,7 @@
   }
   
   &-logo {
-    display: block;
+    display: $dis;
     margin-left: auto;
     margin-right: auto;
   }
