--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -5,13 +5,13 @@
 
     .container {
       max-width: 1400px;
-      display: block;
+      display: $dis;
       margin-left: auto;
       margin-right: auto;
     }
     
     .centered {
-      display: block;
+      display: $dis;
       margin-left: auto;
       margin-right: auto;
     }
