--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -29,8 +29,11 @@ $light-red: #ec9fa3;
 $light-orange: #fd9f85;
 $faded-green: #80e8d1;
 
+// Display ----------------------
+$dis: block;
 
-
+// Media querie breakpoints--------
+$brk-mw : '(min-width: 768px)';
 
 
 
