--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -33,7 +33,7 @@ $faded-green: #80e8d1;
 $dis: block;
 
 // Media querie breakpoints--------
-$brk-mw : '(min-width: 768px)';
+$break-mw: 768px;
 
 
 
